# Pizza

./: .depend  .gitignore  CMakeLists.txt  Main.cpp  Makefile  Pizza.cpp  Pizza.h  README.md  b  main.cpp  pizza.txt
cmake/: HunterGate.cmake
